# MeiliDB

meilidb/: Cargo.toml
meilidb-core/: Cargo.toml
meilidb-core/src/: lib.rs  query_builder.rs  query_enhancer.rs  raw_document.rs  store.rs
meilidb-core/src/criterion/: document_id.rs  exact.rs  mod.rs  number_of_words.rs  sum_of_typos.rs  sum_of_words_attribute.rs  sum_of_words_position.rs  words_proximity.rs
meilidb-data/: Cargo.toml
meilidb-data/src/: indexer.rs  lib.rs  schema.rs
meilidb-data/src/database/: custom_settings.rs  docs_words_index.rs  documents_addition.rs  documents_deletion.rs  documents_index.rs  error.rs  index.rs  main_index.rs  mod.rs  synonyms_addition.rs  synonyms_deletion.rs  words_index.rs
meilidb-data/src/database/index/: main_index.rs  mod.rs  updates_index.rs
meilidb-data/src/database/update/: documents_addition.rs  documents_deletion.rs  synonyms_addition.rs  synonyms_deletion.rs
meilidb-data/src/serde/: deserializer.rs  mod.rs
meilidb-data/tests/: updates.rs
meilidb-schema/src/: lib.rs
meilidb/examples/: create-database.rs  database-common-words.rs  query-database.rs
meilidb/src/: sort_by_attr.rs
